{{$NEXT}}

0.27   2017-01-30

- Inflating File::ChangeNotify::Default::Watcher into a Moose object with
  Moose 2.2000 would cause an error or warning because of a bug in how it
  defined an attribute. This broke Catalyst::Restarter.


0.26   2016-05-29

- Require Moo 1.006000+.


0.25   2016-05-28

- Switched from Moose to Moo and Type::Tiny.

- Switched from Class::Load to Module::Runtime.

- Made File::ChangeNotify::Watcher a role instead of a parent class.

- Fixed a bug where the wrong watcher class could be used the second time
  File::ChangeNotify->instantiate_watcher was called.

- Allow the exclude parameter to accept subroutine references. Patch by
  H. Merijn Brand. RT #114492.


0.24   2013-11-28

- Removed used of deprecated Class::MOP::load_class().


0.23   2013-01-26

- The new_events() watcher method blocked when using IO::Kqueue as the watcher
  backend. Reported and patched by Jun Kuriyama.


0.22   2012-04-13

- Remove unnecessary Perl 5.10 requirement.


0.21   2012-02-03

- The implementation of the exclude feature did not work properly in several
  cases. First, for the Inotify and KQueue watchers, when a new directory was
  created that should have been excluded, it was not. Second, it didn't work
  for files at all for these watchers. Reported by Jon Swartz. RT #73089.


0.20   2011-04-19

- The KQueue watcher checks that a file has a file descriptor to avoid
  watching closed files. Patch by Adreas Voegele.


0.19   2010-10-17

- The all.t test didn't run any tests at all if neither the Inotify nor KQueue
  watchers could be loaded. This was treated as a failure by test
  harnesses. Now we always test the Default class.


0.18   2010-10-15

- Always make a Default watcher object if we cannot load an OS-specific class.

- Add Test::Exception as a test prereq.


0.17   2010-10-04

- Loading File::ChangeNotify always loads the Default watcher class. This will
  give a useful error message if this module's prereqs are not loaded.

